Fix screenshots size on mobile

--- a/src/assets/sass/components/_hero.scss
+++ b/src/assets/sass/components/_hero.scss
@@ -45,6 +45,7 @@ section#site-hero {
     margin: 0 !important;
     box-shadow: none !important;
     border: 2px solid $color-gray !important;
+    max-width: 100%;
   }
 }
 .screenshot.left {
